cmake_minimum_required(VERSION 3.27)
project(ilearncppwithravesli)

set(CMAKE_CXX_STANDARD 17)

add_executable(ilearncppwithravesli main.cpp
        main.cpp
        constants.h
        chapter5Task2.cpp
        chapter5Task2.h
        chapter5Task1.cpp
        chapter5Task1.h
        chapter6Task1.cpp
        chapter6Task1.h
)
