cmake_minimum_required(VERSION 3.27)
project(ilearncppwithravesli)

set(CMAKE_CXX_STANDARD 17)

add_executable(ilearncppwithravesli main.cpp
        main.cpp
        constants.h
        chapter5/chapter5Task2.cpp
        chapter5/chapter5Task2.h
        chapter5/chapter5Task1.cpp
        chapter5/chapter5Task1.h
        chapter6/chapter6Task1.cpp
        chapter6/chapter6Task1.h
        chapter6/chapter6Task2.cpp
        chapter6/chapter6Task2.h
        chapter6/chapter6Task3.cpp
        chapter6/chapter6Task3.h
        chapter6/chapter6Task4.cpp
        chapter6/chapter6Task4.h
        chapter6/chapter6Task6.cpp
        chapter6/chapter6Task6.h
        chapter7/calculatorUsingFunctionPointers.cpp
        chapter7/calculatorUsingFunctionPointers.h
        chapter7/chapter7Task1.h
        chapter7/chapter7Task3binarySearch.cpp
        chapter7/chapter7Task3binarySearch.h
)
