cmake_minimum_required(VERSION 3.27)
project(ilearncppwithravesli)

set(CMAKE_CXX_STANDARD 17)

add_executable(ilearncppwithravesli main.cpp
        main.cpp
        constants.h
        chapter5/chapter5Task2.cpp
        chapter5/chapter5Task2.h
        chapter5/chapter5Task1.cpp
        chapter5/chapter5Task1.h
        chapter6/chapter6Task1.cpp
        chapter6/chapter6Task1.h
        chapter6/chapter6Task2.cpp
        chapter6/chapter6Task2.h
        chapter6/chapter6Task3.cpp
        chapter6/chapter6Task3.h
        chapter6/chapter6Task4.cpp
        chapter6/chapter6Task4.h
        chapter6/chapter6Task6.cpp
        chapter6/chapter6Task6.h
        chapter7/calculatorUsingFunctionPointers.cpp
        chapter7/calculatorUsingFunctionPointers.h
        chapter7/chapter7Task1.h
        chapter7/chapter7Task3binarySearch.cpp
        chapter7/chapter7Task3binarySearch.h
        headers.h
        Timer.cpp
        Timer.h
        chapter8/Point.cpp
        chapter8/Point.h
        chapter8/chapter8.cpp
        chapter8/chapter8.h
        chapter8/Welcome.cpp
        chapter8/Welcome.h
        chapter8/Monster.cpp
        chapter8/Monster.h
        chapter8/MonsterGenerator.cpp
        chapter8/MonsterGenerator.h
        chapter8/Card.cpp
        chapter8/Card.h
        chapter8/Deck.cpp
        chapter8/Deck.h
        chapter9/chapter9.cpp
        chapter9/chapter9.h
        chapter9/Average.cpp
        chapter9/Average.h
        chapter9/IntArray.cpp
        chapter9/IntArray.h
        chapter9/FixedPoint.cpp
        chapter9/FixedPoint.h
        chapter10/lessons/Point2D.h
        chapter10/lessons/Creature.h
        chapter11/task2/Fruit.h
        chapter11/task2/Apple.h
        chapter11/task2/Banana.h
        chapter11/chapter11.cpp
        chapter11/chapter11.h
        chapter11/task2/GrannySmith.h
        chapter11/task3/Creature.h
        chapter11/task3/Player.h
        chapter11/task3/Monster.cpp
        chapter11/task3/Monster.h
        getRandNum.h
        URNG.h
)
